log
Wed 27 Mar 2024 06:29:08 PM UTC: 
 tests:  0|6
total_score: 0/70
36cd5d0
Wed 27 Mar 2024 06:33:49 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
c8b4dd6
Wed 27 Mar 2024 06:34:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
39ad0cf
Wed 27 Mar 2024 06:36:40 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:47:5: error: expected identifier or ‘(’ before ‘return’
   47 |     return NULL;
      |     ^~~~~~
list.c:48:1: error: expected identifier or ‘(’ before ‘}’ token
   48 | }
      | ^
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
98250a8
Wed 27 Mar 2024 06:36:54 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b5d3180
Wed 27 Mar 2024 06:37:49 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ec12143
Wed 27 Mar 2024 06:38:38 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
52879ad
Wed 27 Mar 2024 06:40:16 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6d37b3a
Wed 27 Mar 2024 06:40:42 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
40d2cfb
Wed 27 Mar 2024 06:46:18 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|4
total_score: 25/70
9ef5bd7
Wed 27 Mar 2024 06:50:20 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
1aa1d96
Wed 27 Mar 2024 06:52:26 PM UTC: 
 list.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 25/70
7c11851
Wed 27 Mar 2024 06:55:18 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e36a834
Wed 27 Mar 2024 06:55:30 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|4
total_score: 25/70
7c8fbd1
Wed 27 Mar 2024 06:57:51 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
15a8ffd
Wed 27 Mar 2024 06:58:26 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
63b8aef
Wed 27 Mar 2024 07:01:16 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
f805762
Wed 27 Mar 2024 07:02:46 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:18: error: ‘Node’ has no member named ‘head’
   74 |     list->current->head = nuevo;
      |                  ^~
Compilation failed
3740fb9
